# Production-Voice-Chatbot-Automation-AI-Evaluation-Framework

./: .env.example  .gitignore  FAQ.md  README.md  generate_dashboard.py  pyproject.toml  requirements.txt  stepguide.md  talk_to_bot.py  test_chat.py  test_voice_pipeline.py
app/: __init__.py
app/api/: __init__.py
app/config/: __init__.py  settings.py
app/conversation/: __init__.py  base.py
app/llm/: __init__.py  base.py
app/logs/: __init__.py
app/models/: __init__.py  base.py
app/services/: __init__.py  conversation_service.py  openai_service.py  speech_service.py
app/speech/: __init__.py  base.py
app/tests/: __init__.py
app/utils/: __init__.py  exceptions.py  logger.py
audio/input/: .keep
evaluation/: __init__.py  config.py  evaluator.py  execution_result.py  interfaces.py  models.py  report_generator.py  runner.py
evaluation/adapters/: __init__.py  mock_services.py
evaluation/aggregators/: __init__.py  qa_aggregator.py
evaluation/deepeval/: __init__.py  deepeval_runner.py
evaluation/engines/: __init__.py
evaluation/interfaces/: __init__.py  evaluator.py  evaluator_interface.py  metrics.py  reporting.py  runner.py
evaluation/metrics/: __init__.py  cer.py  conversation.py  correctness.py  faithfulness.py  hallucination.py  latency.py  relevance.py  toxicity.py  wer.py
evaluation/models/: __init__.py  reports.py  results.py  scenarios.py
evaluation/runners/: __init__.py  evaluation_runner.py  scenario_loader.py
reports/html/: .keep  report.html
reports/json/: .keep
test_data/conversations/: .keep  all_enterprise_scenarios.json  banking_001.json  banking_002.json  banking_003.json  banking_004.json  banking_005.json  ecommerce_001.json  ecommerce_002.json  ecommerce_003.json  ecommerce_004.json  ecommerce_005.json  healthcare_001.json  healthcare_002.json  healthcare_003.json  healthcare_004.json  healthcare_005.json  insurance_001.json  insurance_002.json  insurance_003.json  insurance_004.json  insurance_005.json  sample_flight_booking.json  sample_flight_booking.yaml  support_001.json  support_002.json  support_003.json  support_004.json  support_005.json  travel_001.json  travel_002.json  travel_003.json  travel_004.json  travel_005.json
test_data/expected_answers/: .keep
test_data/prompts/: .keep
tests/: __init__.py  conftest.py
tests/conversation/: __init__.py
tests/functional/: __init__.py  test_deepeval_runner.py  test_evaluation_runner.py
tests/integration/: test_deepeval_runner_integration.py  test_evaluation_runner_integration.py  test_openai_service_integration.py  test_speech_service_integration.py  test_tts_service_integration.py
tests/regression/: __init__.py
tests/safety/: __init__.py
tests/unit/: test_config_logger.py  (+8 more)
(+5 files in other folders)
